# LatheRiscV

./: .gitignore  CMakeLists.txt  Lathe.c  Lathe.h  README.md  axisCtl.c  axisCtl.h  build.sh  copyLatheRiscv.bat  dbgSerial.c  dbgSerial.h  fpga.c  fpga.h  inc.py  inc.sh  makefile  remCmd.c  remCmd.h  remSerial.c  remSerial.h  riscvCmdList.h  riscvCmdSize.h  riscvCmdStr.h  riscvFunc.c  riscvParm.h  riscvParmList.h  riscvStruct.h
